mount the directory paths for ad sim detector tests

--- a/services/PE_docker_image/compose.yml
+++ b/services/PE_docker_image/compose.yml
@@ -18,6 +18,7 @@ services:
 
     volumes:
       - ../../opi/auto-generated/ophyd-adsim-cam:/epics/opi
+      - /tmp/ophyd_AD_test:/tmp/ophyd_AD_test
 
     command: /epics/ioc/start.sh
 
