--- a/services/ad_sim_docker_image/compose.yml
+++ b/services/ad_sim_docker_image/compose.yml
@@ -7,7 +7,7 @@ services:
       file: ../../include/ioc.yml
 
     image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2025.3.1
-
+    platform: linux/amd64
     labels:
       version: 0.1.0
 
